# serializer version: 1
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[False-False-EmployerFactory][archived_professional]
  list([
    dict({
      'date_joined': datetime.date(2025, 2, 1),
      'department': '',
      'first_login': datetime.date(2023, 3, 1),
      'identity_provider': 'PC',
      'last_login': datetime.date(2023, 3, 1),
      'title': '',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[False-False-LaborInspectorFactory][archived_professional]
  list([
    dict({
      'date_joined': datetime.date(2025, 2, 1),
      'department': '',
      'first_login': datetime.date(2023, 3, 1),
      'identity_provider': 'DJANGO',
      'last_login': datetime.date(2023, 3, 1),
      'title': '',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[False-False-PrescriberFactory][archived_professional]
  list([
    dict({
      'date_joined': datetime.date(2025, 2, 1),
      'department': '',
      'first_login': datetime.date(2023, 3, 1),
      'identity_provider': 'PC',
      'last_login': datetime.date(2023, 3, 1),
      'title': '',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[False-True-EmployerFactory][archived_professional]
  list([
    dict({
      'date_joined': datetime.date(2025, 2, 1),
      'department': '',
      'first_login': datetime.date(2023, 3, 1),
      'identity_provider': 'PC',
      'last_login': datetime.date(2023, 3, 1),
      'title': '',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[False-True-EmployerFactory][archived_professional_email_body]
  '''
  Bonjour John DOE,
  Le XX/XX/XXXX, nous vous avons informé que votre compte sur les Emplois de l’inclusion serait supprimé.
  A ce jour, nous n’avons détecté aucune connexion, par conséquent nous avons supprimé l’intégralité des données associées à votre compte.
  En cas de besoin, vous pouvez toujours vous réinscrire sur https://emplois.inclusion.beta.gouv.fr/
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[False-True-EmployerFactory][archived_professional_email_subject]
  '[DEV] Suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[False-True-LaborInspectorFactory][archived_professional]
  list([
    dict({
      'date_joined': datetime.date(2025, 2, 1),
      'department': '',
      'first_login': datetime.date(2023, 3, 1),
      'identity_provider': 'DJANGO',
      'last_login': datetime.date(2023, 3, 1),
      'title': '',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[False-True-LaborInspectorFactory][archived_professional_email_body]
  '''
  Bonjour John DOE,
  Le XX/XX/XXXX, nous vous avons informé que votre compte sur les Emplois de l’inclusion serait supprimé.
  A ce jour, nous n’avons détecté aucune connexion, par conséquent nous avons supprimé l’intégralité des données associées à votre compte.
  En cas de besoin, vous pouvez toujours vous réinscrire sur https://emplois.inclusion.beta.gouv.fr/
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[False-True-LaborInspectorFactory][archived_professional_email_subject]
  '[DEV] Suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[False-True-PrescriberFactory][archived_professional]
  list([
    dict({
      'date_joined': datetime.date(2025, 2, 1),
      'department': '',
      'first_login': datetime.date(2023, 3, 1),
      'identity_provider': 'PC',
      'last_login': datetime.date(2023, 3, 1),
      'title': '',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[False-True-PrescriberFactory][archived_professional_email_body]
  '''
  Bonjour Pierre DUPONT,
  Le XX/XX/XXXX, nous vous avons informé que votre compte sur les Emplois de l’inclusion serait supprimé.
  A ce jour, nous n’avons détecté aucune connexion, par conséquent nous avons supprimé l’intégralité des données associées à votre compte.
  En cas de besoin, vous pouvez toujours vous réinscrire sur https://emplois.inclusion.beta.gouv.fr/
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[False-True-PrescriberFactory][archived_professional_email_subject]
  '[DEV] Suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[True-False-EmployerFactory][archived_professional]
  list([
    dict({
      'date_joined': datetime.date(2025, 2, 1),
      'department': '',
      'first_login': None,
      'identity_provider': 'PC',
      'last_login': None,
      'title': '',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[True-False-LaborInspectorFactory][archived_professional]
  list([
    dict({
      'date_joined': datetime.date(2025, 2, 1),
      'department': '',
      'first_login': None,
      'identity_provider': 'DJANGO',
      'last_login': None,
      'title': '',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[True-False-PrescriberFactory][archived_professional]
  list([
    dict({
      'date_joined': datetime.date(2025, 2, 1),
      'department': '',
      'first_login': None,
      'identity_provider': 'PC',
      'last_login': None,
      'title': '',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[True-True-EmployerFactory][archived_professional]
  list([
    dict({
      'date_joined': datetime.date(2025, 2, 1),
      'department': '',
      'first_login': None,
      'identity_provider': 'PC',
      'last_login': None,
      'title': '',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[True-True-EmployerFactory][archived_professional_email_body]
  '''
  Bonjour John DOE,
  Le XX/XX/XXXX, nous vous avons informé que votre compte sur les Emplois de l’inclusion serait supprimé.
  A ce jour, nous n’avons détecté aucune connexion, par conséquent nous avons supprimé l’intégralité des données associées à votre compte.
  En cas de besoin, vous pouvez toujours vous réinscrire sur https://emplois.inclusion.beta.gouv.fr/
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[True-True-EmployerFactory][archived_professional_email_subject]
  '[DEV] Suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[True-True-LaborInspectorFactory][archived_professional]
  list([
    dict({
      'date_joined': datetime.date(2025, 2, 1),
      'department': '',
      'first_login': None,
      'identity_provider': 'DJANGO',
      'last_login': None,
      'title': '',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[True-True-LaborInspectorFactory][archived_professional_email_body]
  '''
  Bonjour John DOE,
  Le XX/XX/XXXX, nous vous avons informé que votre compte sur les Emplois de l’inclusion serait supprimé.
  A ce jour, nous n’avons détecté aucune connexion, par conséquent nous avons supprimé l’intégralité des données associées à votre compte.
  En cas de besoin, vous pouvez toujours vous réinscrire sur https://emplois.inclusion.beta.gouv.fr/
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[True-True-LaborInspectorFactory][archived_professional_email_subject]
  '[DEV] Suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[True-True-PrescriberFactory][archived_professional]
  list([
    dict({
      'date_joined': datetime.date(2025, 2, 1),
      'department': '',
      'first_login': None,
      'identity_provider': 'PC',
      'last_login': None,
      'title': '',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[True-True-PrescriberFactory][archived_professional_email_body]
  '''
  Bonjour Pierre DUPONT,
  Le XX/XX/XXXX, nous vous avons informé que votre compte sur les Emplois de l’inclusion serait supprimé.
  A ce jour, nous n’avons détecté aucune connexion, par conséquent nous avons supprimé l’intégralité des données associées à votre compte.
  En cas de besoin, vous pouvez toujours vous réinscrire sur https://emplois.inclusion.beta.gouv.fr/
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_and_delete_inactive_professionals_after_grace_period[True-True-PrescriberFactory][archived_professional_email_subject]
  '[DEV] Suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_inactive_professionals_with_sensitive_related_objects_after_grace_period[False-EmployerFactory-CompanyMembershipFactory][user_data_after_anonymization]
  dict({
    'address_line_1': '',
    'address_line_2': '',
    'anonymized_at': FakeDatetime(2025, 2, 15, 0, 0, tzinfo=datetime.timezone.utc),
    'city': '',
    'coords': None,
    'email': None,
    'insee_city': None,
    'is_active': False,
    'password': 'pbkdf2_sha256$test$hash',
    'phone': '',
    'post_code': '',
  })
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_inactive_professionals_with_sensitive_related_objects_after_grace_period[False-LaborInspectorFactory-InstitutionMembershipFactory][user_data_after_anonymization]
  dict({
    'address_line_1': '',
    'address_line_2': '',
    'anonymized_at': FakeDatetime(2025, 2, 15, 0, 0, tzinfo=datetime.timezone.utc),
    'city': '',
    'coords': None,
    'email': None,
    'insee_city': None,
    'is_active': False,
    'password': 'pbkdf2_sha256$test$hash',
    'phone': '',
    'post_code': '',
  })
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_inactive_professionals_with_sensitive_related_objects_after_grace_period[False-PrescriberFactory-PrescriberMembershipFactory][user_data_after_anonymization]
  dict({
    'address_line_1': '',
    'address_line_2': '',
    'anonymized_at': FakeDatetime(2025, 2, 15, 0, 0, tzinfo=datetime.timezone.utc),
    'city': '',
    'coords': None,
    'email': None,
    'insee_city': None,
    'is_active': False,
    'password': 'pbkdf2_sha256$test$hash',
    'phone': '',
    'post_code': '',
  })
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_inactive_professionals_with_sensitive_related_objects_after_grace_period[True-EmployerFactory-CompanyMembershipFactory][archived_professional_email_body]
  '''
  Bonjour John DOE,
  Le XX/XX/XXXX, nous vous avons informé que votre compte sur les Emplois de l’inclusion serait supprimé.
  A ce jour, nous n’avons détecté aucune connexion, par conséquent nous avons supprimé l’intégralité des données associées à votre compte.
  En cas de besoin, vous pouvez toujours vous réinscrire sur https://emplois.inclusion.beta.gouv.fr/
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_inactive_professionals_with_sensitive_related_objects_after_grace_period[True-EmployerFactory-CompanyMembershipFactory][archived_professional_email_subject]
  '[DEV] Suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_inactive_professionals_with_sensitive_related_objects_after_grace_period[True-EmployerFactory-CompanyMembershipFactory][user_data_after_anonymization]
  dict({
    'address_line_1': '',
    'address_line_2': '',
    'anonymized_at': FakeDatetime(2025, 2, 15, 0, 0, tzinfo=datetime.timezone.utc),
    'city': '',
    'coords': None,
    'email': None,
    'insee_city': None,
    'is_active': False,
    'password': 'pbkdf2_sha256$test$hash',
    'phone': '',
    'post_code': '',
  })
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_inactive_professionals_with_sensitive_related_objects_after_grace_period[True-LaborInspectorFactory-InstitutionMembershipFactory][archived_professional_email_body]
  '''
  Bonjour John DOE,
  Le XX/XX/XXXX, nous vous avons informé que votre compte sur les Emplois de l’inclusion serait supprimé.
  A ce jour, nous n’avons détecté aucune connexion, par conséquent nous avons supprimé l’intégralité des données associées à votre compte.
  En cas de besoin, vous pouvez toujours vous réinscrire sur https://emplois.inclusion.beta.gouv.fr/
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_inactive_professionals_with_sensitive_related_objects_after_grace_period[True-LaborInspectorFactory-InstitutionMembershipFactory][archived_professional_email_subject]
  '[DEV] Suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_inactive_professionals_with_sensitive_related_objects_after_grace_period[True-LaborInspectorFactory-InstitutionMembershipFactory][user_data_after_anonymization]
  dict({
    'address_line_1': '',
    'address_line_2': '',
    'anonymized_at': FakeDatetime(2025, 2, 15, 0, 0, tzinfo=datetime.timezone.utc),
    'city': '',
    'coords': None,
    'email': None,
    'insee_city': None,
    'is_active': False,
    'password': 'pbkdf2_sha256$test$hash',
    'phone': '',
    'post_code': '',
  })
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_inactive_professionals_with_sensitive_related_objects_after_grace_period[True-PrescriberFactory-PrescriberMembershipFactory][archived_professional_email_body]
  '''
  Bonjour Pierre DUPONT,
  Le XX/XX/XXXX, nous vous avons informé que votre compte sur les Emplois de l’inclusion serait supprimé.
  A ce jour, nous n’avons détecté aucune connexion, par conséquent nous avons supprimé l’intégralité des données associées à votre compte.
  En cas de besoin, vous pouvez toujours vous réinscrire sur https://emplois.inclusion.beta.gouv.fr/
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_inactive_professionals_with_sensitive_related_objects_after_grace_period[True-PrescriberFactory-PrescriberMembershipFactory][archived_professional_email_subject]
  '[DEV] Suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_anonymize_inactive_professionals_with_sensitive_related_objects_after_grace_period[True-PrescriberFactory-PrescriberMembershipFactory][user_data_after_anonymization]
  dict({
    'address_line_1': '',
    'address_line_2': '',
    'anonymized_at': FakeDatetime(2025, 2, 15, 0, 0, tzinfo=datetime.timezone.utc),
    'city': '',
    'coords': None,
    'email': None,
    'insee_city': None,
    'is_active': False,
    'password': 'pbkdf2_sha256$test$hash',
    'phone': '',
    'post_code': '',
  })
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_inactive_jobseekers_after_grace_period[jobseeker_not_is_active][archived_jobseeker]
  list([
    dict({
      'birth_year': 1964,
      'count_IAE_applications': 0,
      'count_accepted_applications': 0,
      'count_total_applications': 0,
      'date_joined': datetime.date(2023, 10, 1),
      'department': '',
      'first_login': None,
      'had_nir': True,
      'had_pole_emploi_id': False,
      'identity_provider': 'DJANGO',
      'lack_of_nir_reason': '',
      'last_login': None,
      'nir_sex': 7,
      'nir_year': 41,
      'title': 'M',
      'user_signup_kind': None,
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_inactive_jobseekers_after_grace_period[jobseeker_with_all_datas_created_by_employer][archived_jobseeker]
  list([
    dict({
      'birth_year': 1990,
      'count_IAE_applications': 0,
      'count_accepted_applications': 1,
      'count_total_applications': 2,
      'date_joined': datetime.date(2021, 12, 1),
      'department': '',
      'first_login': datetime.date(2021, 12, 1),
      'had_nir': True,
      'had_pole_emploi_id': True,
      'identity_provider': 'DJANGO',
      'lack_of_nir_reason': '',
      'last_login': datetime.date(2021, 12, 1),
      'nir_sex': 6,
      'nir_year': 55,
      'title': 'MME',
      'user_signup_kind': 'employer',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_inactive_jobseekers_after_grace_period[jobseeker_with_all_datas_created_by_employer][archived_jobseeker_email_body]
  '''
  Bonjour Johan ANDERSON,
  Le XX/XX/XXXX, nous vous avons informé que votre compte sur les Emplois de l’inclusion serait supprimé.
  A ce jour, nous n’avons détecté aucune connexion, par conséquent nous avons supprimé l’intégralité des données associées à votre compte.
  En cas de besoin, vous pouvez toujours vous réinscrire sur https://emplois.inclusion.beta.gouv.fr/
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_inactive_jobseekers_after_grace_period[jobseeker_with_all_datas_created_by_employer][archived_jobseeker_email_subject]
  '[DEV] Suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_inactive_jobseekers_after_grace_period[jobseeker_with_all_datas_created_by_prescriber][archived_jobseeker]
  list([
    dict({
      'birth_year': 1985,
      'count_IAE_applications': 2,
      'count_accepted_applications': 1,
      'count_total_applications': 2,
      'date_joined': datetime.date(2020, 4, 1),
      'department': '',
      'first_login': datetime.date(2020, 4, 1),
      'had_nir': True,
      'had_pole_emploi_id': True,
      'identity_provider': 'DJANGO',
      'lack_of_nir_reason': '',
      'last_login': datetime.date(2020, 4, 1),
      'nir_sex': 8,
      'nir_year': 55,
      'title': 'MME',
      'user_signup_kind': 'prescriber',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_inactive_jobseekers_after_grace_period[jobseeker_with_all_datas_created_by_prescriber][archived_jobseeker_email_body]
  '''
  Bonjour Johanna ANDREWS,
  Le XX/XX/XXXX, nous vous avons informé que votre compte sur les Emplois de l’inclusion serait supprimé.
  A ce jour, nous n’avons détecté aucune connexion, par conséquent nous avons supprimé l’intégralité des données associées à votre compte.
  En cas de besoin, vous pouvez toujours vous réinscrire sur https://emplois.inclusion.beta.gouv.fr/
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_inactive_jobseekers_after_grace_period[jobseeker_with_all_datas_created_by_prescriber][archived_jobseeker_email_subject]
  '[DEV] Suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_inactive_jobseekers_after_grace_period[jobseeker_with_very_few_datas][archived_jobseeker]
  list([
    dict({
      'birth_year': None,
      'count_IAE_applications': 0,
      'count_accepted_applications': 0,
      'count_total_applications': 0,
      'date_joined': datetime.date(2022, 11, 1),
      'department': '',
      'first_login': None,
      'had_nir': False,
      'had_pole_emploi_id': False,
      'identity_provider': 'DJANGO',
      'lack_of_nir_reason': 'reason',
      'last_login': None,
      'nir_sex': None,
      'nir_year': None,
      'title': 'M',
      'user_signup_kind': None,
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_inactive_jobseekers_after_grace_period[jobseeker_with_very_few_datas][archived_jobseeker_email_body]
  '''
  Bonjour Martin JACOBSON,
  Le XX/XX/XXXX, nous vous avons informé que votre compte sur les Emplois de l’inclusion serait supprimé.
  A ce jour, nous n’avons détecté aucune connexion, par conséquent nous avons supprimé l’intégralité des données associées à votre compte.
  En cas de besoin, vous pouvez toujours vous réinscrire sur https://emplois.inclusion.beta.gouv.fr/
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_inactive_jobseekers_after_grace_period[jobseeker_with_very_few_datas][archived_jobseeker_email_subject]
  '[DEV] Suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_not_eligible_jobapplications_of_inactive_jobseekers_after_grace_period[application_sent_by_authorized_prescriber][archived_application]
  list([
    dict({
      'applied_at': datetime.date(2025, 2, 1),
      'company_department': '14',
      'company_has_convention': True,
      'company_kind': 'EITI',
      'company_naf': '8888Y',
      'had_resume': True,
      'has_been_transferred': False,
      'has_diagoriente_invitation': False,
      'hiring_contract_nature': None,
      'hiring_contract_type': None,
      'hiring_rome': None,
      'hiring_start_date': datetime.date(2025, 2, 1),
      'hiring_without_approval': False,
      'job_seeker_birth_year': 1978,
      'job_seeker_department_same_as_company_department': False,
      'last_transition_at': datetime.date(2025, 2, 1),
      'number_of_jobs_applied_for': 0,
      'origin': 'default',
      'processed_at': None,
      'refusal_reason': '',
      'sender_company_kind': None,
      'sender_kind': 'prescriber',
      'sender_prescriber_organization_authorization_status': 'VALIDATED',
      'sender_prescriber_organization_kind': 'FT',
      'state': 'prior_to_hire',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_not_eligible_jobapplications_of_inactive_jobseekers_after_grace_period[application_sent_by_company][archived_application]
  list([
    dict({
      'applied_at': datetime.date(2025, 2, 1),
      'company_department': '76',
      'company_has_convention': False,
      'company_kind': 'EI',
      'company_naf': '4567A',
      'had_resume': True,
      'has_been_transferred': False,
      'has_diagoriente_invitation': False,
      'hiring_contract_nature': None,
      'hiring_contract_type': None,
      'hiring_rome': None,
      'hiring_start_date': datetime.date(2025, 2, 1),
      'hiring_without_approval': False,
      'job_seeker_birth_year': 1978,
      'job_seeker_department_same_as_company_department': True,
      'last_transition_at': datetime.date(2025, 2, 1),
      'number_of_jobs_applied_for': 0,
      'origin': 'default',
      'processed_at': None,
      'refusal_reason': '',
      'sender_company_kind': None,
      'sender_kind': 'employer',
      'sender_prescriber_organization_authorization_status': None,
      'sender_prescriber_organization_kind': None,
      'state': 'processing',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_not_eligible_jobapplications_of_inactive_jobseekers_after_grace_period[hired_jobseeker_with_3_jobs][archived_application]
  list([
    dict({
      'applied_at': datetime.date(2025, 2, 1),
      'company_department': '76',
      'company_has_convention': True,
      'company_kind': 'GEIQ',
      'company_naf': '1234Z',
      'had_resume': True,
      'has_been_transferred': False,
      'has_diagoriente_invitation': False,
      'hiring_contract_nature': 'PEC_OFFER',
      'hiring_contract_type': 'FIXED_TERM_TREMPLIN',
      'hiring_rome': "Conduite d'engins de déplacement des charges (N1101)",
      'hiring_start_date': datetime.date(2025, 2, 1),
      'hiring_without_approval': True,
      'job_seeker_birth_year': 1978,
      'job_seeker_department_same_as_company_department': True,
      'last_transition_at': datetime.date(2025, 3, 1),
      'number_of_jobs_applied_for': 3,
      'origin': 'default',
      'processed_at': datetime.date(2025, 2, 1),
      'refusal_reason': '',
      'sender_company_kind': None,
      'sender_kind': 'job_seeker',
      'sender_prescriber_organization_authorization_status': None,
      'sender_prescriber_organization_kind': None,
      'state': 'accepted',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_not_eligible_jobapplications_of_inactive_jobseekers_after_grace_period[refused_application_with_1_jobs][archived_application]
  list([
    dict({
      'applied_at': datetime.date(2025, 2, 1),
      'company_department': '76',
      'company_has_convention': True,
      'company_kind': 'OPCS',
      'company_naf': '4567A',
      'had_resume': False,
      'has_been_transferred': False,
      'has_diagoriente_invitation': False,
      'hiring_contract_nature': None,
      'hiring_contract_type': None,
      'hiring_rome': None,
      'hiring_start_date': datetime.date(2025, 2, 1),
      'hiring_without_approval': False,
      'job_seeker_birth_year': 1978,
      'job_seeker_department_same_as_company_department': True,
      'last_transition_at': datetime.date(2025, 2, 1),
      'number_of_jobs_applied_for': 1,
      'origin': 'default',
      'processed_at': datetime.date(2025, 2, 1),
      'refusal_reason': 'reason',
      'sender_company_kind': None,
      'sender_kind': 'job_seeker',
      'sender_prescriber_organization_authorization_status': None,
      'sender_prescriber_organization_kind': None,
      'state': 'refused',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_archive_not_eligible_jobapplications_of_inactive_jobseekers_after_grace_period[transferred_application_with_diagoriente_invitation][archived_application]
  list([
    dict({
      'applied_at': datetime.date(2025, 2, 1),
      'company_department': '76',
      'company_has_convention': True,
      'company_kind': 'EI',
      'company_naf': '4567A',
      'had_resume': True,
      'has_been_transferred': True,
      'has_diagoriente_invitation': True,
      'hiring_contract_nature': None,
      'hiring_contract_type': None,
      'hiring_rome': None,
      'hiring_start_date': datetime.date(2025, 2, 1),
      'hiring_without_approval': False,
      'job_seeker_birth_year': 1978,
      'job_seeker_department_same_as_company_department': True,
      'last_transition_at': datetime.date(2025, 2, 1),
      'number_of_jobs_applied_for': 0,
      'origin': 'default',
      'processed_at': None,
      'refusal_reason': '',
      'sender_company_kind': None,
      'sender_kind': 'employer',
      'sender_prescriber_organization_authorization_status': None,
      'sender_prescriber_organization_kind': None,
      'state': 'postponed',
    }),
  ])
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_notify_inactive_jobseekers_on_last_activity[jobseeker_in_followup_group_without_recent_activity][inactive_jobseeker_email_body]
  '''
  Bonjour Jane DOE,
  Nous n’avons détecté aucune activité sur votre compte sur les Emplois de l’inclusion depuis le XX/XX/XXXX.
  Sans connexion de votre part avant le YY/YY/YYYY, votre compte sera supprimé ainsi que toutes les données associées.
  Si vous souhaitez conserver votre espace personnel, nous vous invitons à vous reconnecter sur https://emplois.inclusion.beta.gouv.fr/ .
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_notify_inactive_jobseekers_on_last_activity[jobseeker_in_followup_group_without_recent_activity][inactive_jobseeker_email_subject]
  '[DEV] Information avant suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_notify_inactive_jobseekers_on_last_activity[jobseeker_with_job_application_without_recent_activity][inactive_jobseeker_email_body]
  '''
  Bonjour Jane DOE,
  Nous n’avons détecté aucune activité sur votre compte sur les Emplois de l’inclusion depuis le XX/XX/XXXX.
  Sans connexion de votre part avant le YY/YY/YYYY, votre compte sera supprimé ainsi que toutes les données associées.
  Si vous souhaitez conserver votre espace personnel, nous vous invitons à vous reconnecter sur https://emplois.inclusion.beta.gouv.fr/ .
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_notify_inactive_jobseekers_on_last_activity[jobseeker_with_job_application_without_recent_activity][inactive_jobseeker_email_subject]
  '[DEV] Information avant suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_notify_inactive_jobseekers_on_last_activity[jobseeker_without_recent_activity][inactive_jobseeker_email_body]
  '''
  Bonjour Jane DOE,
  Nous n’avons détecté aucune activité sur votre compte sur les Emplois de l’inclusion depuis le XX/XX/XXXX.
  Sans connexion de votre part avant le YY/YY/YYYY, votre compte sera supprimé ainsi que toutes les données associées.
  Si vous souhaitez conserver votre espace personnel, nous vous invitons à vous reconnecter sur https://emplois.inclusion.beta.gouv.fr/ .
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_notify_inactive_jobseekers_on_last_activity[jobseeker_without_recent_activity][inactive_jobseeker_email_subject]
  '[DEV] Information avant suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_notify_inactive_professionals[to_be_notified-employer][inactive_professional_email_body]
  '''
  Bonjour John DOE,
  Nous n’avons détecté aucune activité sur votre compte sur les Emplois de l’inclusion depuis le XX/XX/XXXX.
  Sans connexion de votre part avant le YY/YY/YYYY, votre compte sera supprimé ainsi que toutes les données associées.
  Si vous souhaitez conserver votre espace personnel, nous vous invitons à vous reconnecter sur https://emplois.inclusion.beta.gouv.fr/ .
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_notify_inactive_professionals[to_be_notified-employer][inactive_professional_email_subject]
  '[DEV] Information avant suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_notify_inactive_professionals[to_be_notified-labor_inspector][inactive_professional_email_body]
  '''
  Bonjour John DOE,
  Nous n’avons détecté aucune activité sur votre compte sur les Emplois de l’inclusion depuis le XX/XX/XXXX.
  Sans connexion de votre part avant le YY/YY/YYYY, votre compte sera supprimé ainsi que toutes les données associées.
  Si vous souhaitez conserver votre espace personnel, nous vous invitons à vous reconnecter sur https://emplois.inclusion.beta.gouv.fr/ .
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_notify_inactive_professionals[to_be_notified-labor_inspector][inactive_professional_email_subject]
  '[DEV] Information avant suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_notify_inactive_professionals[to_be_notified-prescriber][inactive_professional_email_body]
  '''
  Bonjour Pierre DUPONT,
  Nous n’avons détecté aucune activité sur votre compte sur les Emplois de l’inclusion depuis le XX/XX/XXXX.
  Sans connexion de votre part avant le YY/YY/YYYY, votre compte sera supprimé ainsi que toutes les données associées.
  Si vous souhaitez conserver votre espace personnel, nous vous invitons à vous reconnecter sur https://emplois.inclusion.beta.gouv.fr/ .
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_notify_inactive_professionals[to_be_notified-prescriber][inactive_professional_email_subject]
  '[DEV] Information avant suppression de votre compte sur les Emplois de l’inclusion'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_suspend_command_setting[False-False][suspend_notify_archive_users_command_log]
  'Start notifying and archiving users in dry_run mode'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_suspend_command_setting[False-True][suspend_notify_archive_users_command_log]
  'Archiving users is suspended, exiting command'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_suspend_command_setting[True-False][suspend_notify_archive_users_command_log]
  'Start notifying and archiving users in wet_run mode'
# ---
# name: TestNotifyArchiveUsersManagementCommand.test_suspend_command_setting[True-True][suspend_notify_archive_users_command_log]
  'Archiving users is suspended, exiting command'
# ---
# name: TestRelatedObjectsConsistency.test_get_filter_kwargs_on_user_for_related_objects_to_check[filter_kwargs_on_user_for_related_objects_to_check]
  dict({
    'approval__isnull': True,
    'approval_manually_delivered__isnull': True,
    'approval_manually_refused__isnull': True,
    'approvals__isnull': True,
    'approvals_suspended_set__isnull': True,
    'authorization_status_set__isnull': True,
    'created_assessments__isnull': True,
    'created_company_set__isnull': True,
    'created_follow_up_groups__isnull': True,
    'created_prescriber_organization_set__isnull': True,
    'eligibilitydiagnosis__isnull': True,
    'final_reviewed_assessments__isnull': True,
    'geiqeligibilitydiagnosis__isnull': True,
    'job_applications__isnull': True,
    'job_applications_sent__isnull': True,
    'jobapplication__isnull': True,
    'jobapplicationtransitionlog__isnull': True,
    'prolongationrequest_processed__isnull': True,
    'prolongationrequests_created__isnull': True,
    'prolongationrequests_declared__isnull': True,
    'prolongationrequests_updated__isnull': True,
    'prolongationrequests_validated__isnull': True,
    'prolongations_created__isnull': True,
    'prolongations_declared__isnull': True,
    'prolongations_updated__isnull': True,
    'prolongations_validated__isnull': True,
    'reactivated_siae_convention_set__isnull': True,
    'reviewed_assessments__isnull': True,
    'submitted_assessments__isnull': True,
    'suspension__isnull': True,
    'updated_companymembership_set__isnull': True,
    'updated_institutionmembership_set__isnull': True,
    'updated_prescribermembership_set__isnull': True,
    'user__isnull': True,
  })
# ---
# name: TestRelatedObjectsConsistency.test_user_related_objects_deleted_on_cascade[user_related_objects_deleted_on_cascade]
  list([
    dict({
      'logentry': <class 'django.contrib.admin.models.LogEntry'>,
    }),
    dict({
      'auth_token': <class 'rest_framework.authtoken.models.Token'>,
    }),
    dict({
      'totpdevice': <class 'django_otp.plugins.otp_totp.models.TOTPDevice'>,
    }),
    dict({
      'emailaddress': <class 'allauth.account.models.EmailAddress'>,
    }),
    dict({
      'companymembership': <class 'itou.companies.models.CompanyMembership'>,
    }),
    dict({
      'jobseeker_profile': <class 'itou.users.models.JobSeekerProfile'>,
    }),
    dict({
      'prescribermembership': <class 'itou.prescribers.models.PrescriberMembership'>,
    }),
    dict({
      'institutionmembership': <class 'itou.institutions.models.InstitutionMembership'>,
    }),
    dict({
      'geiq_eligibility_diagnoses': <class 'itou.eligibility.models.geiq.GEIQEligibilityDiagnosis'>,
    }),
    dict({
      'eligibility_diagnoses': <class 'itou.eligibility.models.iae.EligibilityDiagnosis'>,
    }),
    dict({
      'prescriber_org_invitations': <class 'itou.invitations.models.PrescriberWithOrgInvitation'>,
    }),
    dict({
      'company_invitations': <class 'itou.invitations.models.EmployerInvitation'>,
    }),
    dict({
      'institution_invitations': <class 'itou.invitations.models.LaborInspectorInvitation'>,
    }),
    dict({
      'externaldataimport': <class 'itou.external_data.models.ExternalDataImport'>,
    }),
    dict({
      'jobseekerexternaldata': <class 'itou.external_data.models.JobSeekerExternalData'>,
    }),
    dict({
      'notification_settings': <class 'itou.communications.models.NotificationSettings'>,
    }),
    dict({
      'follow_up_group': <class 'itou.gps.models.FollowUpGroup'>,
    }),
    dict({
      'follow_up_groups': <class 'itou.gps.models.FollowUpGroupMembership'>,
    }),
    dict({
      'rdvi_invitation_requests': <class 'itou.rdv_insertion.models.InvitationRequest'>,
    }),
    dict({
      'rdvi_participations': <class 'itou.rdv_insertion.models.Participation'>,
    }),
  ])
# ---
